feat: 기본요구사항