@@ -6,16 +6,17 @@ import com.sprint.mission.discodeit.dto.request.UserCreateRequest;
 import com.sprint.mission.discodeit.dto.request.UserUpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.UserStatus;
+import com.sprint.mission.discodeit.mapper.UserMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserService;
-import java.time.Instant;
+import com.sprint.mission.discodeit.storage.BinaryContentStorage;
+import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -26,12 +27,18 @@ public class BasicUserService implements UserService {
     private final UserRepository userRepository;
     private final UserStatusRepository userStatusRepository;
     private final BinaryContentRepository binaryContentRepository;
+    private final UserMapper userMapper;
+    private final BinaryContentStorage binaryContentStorage;
+    private final MessageRepository messageRepository;
 
     @Override
-    public User createUser(UserCreateRequest userRequest,
+    @Transactional
+    public UserDto createUser(UserCreateRequest userRequest,
         Optional<BinaryContentCreateRequest> profileRequest) {
+
         String username = userRequest.username();
         String email = userRequest.email();
+        String password = userRequest.password();
 
         if (isEmailDuplicate(email)) {
             throw new IllegalArgumentException("이미 존재하는 이메일입니다: " + email);
@@ -41,61 +48,47 @@ public class BasicUserService implements UserService {
             throw new IllegalArgumentException("이미 존재하는 이름입니다: " + username);
         }
 
-        User user = new User(username, email, userRequest.password());
-        User createdUser = userRepository.save(user);
-
-        // UserStatus 생성
-        Instant now = Instant.now();
-        UserStatus status = new UserStatus(createdUser.getId(), now);
-        userStatusRepository.save(status);
-
-        // Optional 프로필 이미지 처리
-        profileRequest
+        BinaryContent profile = profileRequest
             .filter(BinaryContentCreateRequest::isValid)
-            .ifPresent(profile -> {
-                BinaryContent binaryContent = new BinaryContent(profile.fileName(), user.getId(),
-                    profile.bytes(), profile.contentType());
-                binaryContentRepository.save(binaryContent);
-                user.setProfileId(binaryContent.getId());
-                userRepository.save(user);
-            });
+            .map(req -> {
+                BinaryContent newFile = binaryContentRepository.save(
+                    new BinaryContent(req.fileName(), req.size(), req.contentType()));
+                binaryContentStorage.put(newFile.getId(), req.bytes());
+                return newFile;
+            })
+            .orElse(null);
 
-        return createdUser;
+        User user = new User(username, email, password, profile);
+        User newUser = userRepository.save(user);
+        userStatusRepository.save(newUser.getStatus());
+
+        return userMapper.toDto(newUser);
     }
 
     @Override
     public Optional<UserDto> find(UUID id) {
         return userRepository.findById(id)
-            .map(user -> {
-                boolean isOnline = userStatusRepository.find(user.getId())
-                    .map(UserStatus::isOnline)
-                    .orElse(false);
-                return new UserDto(user, isOnline);
-            });
+            .map(userMapper::toDto);
     }
 
     @Override
     public List<UserDto> findAll() {
         return userRepository.findAll().stream()
-            .map(user -> {
-                boolean isOnline = userStatusRepository.findByUserId(user.getId())
-                    .map(UserStatus::isOnline)
-                    .orElse(false);
-                return new UserDto(user, isOnline);
-            })
-            .collect(Collectors.toList());
+            .map(userMapper::toDto)
+            .toList();
     }
 
     @Override
-    public User update(UUID userId, UserUpdateRequest userUpdateRequest,
-        Optional<BinaryContentCreateRequest> profileCreateRequest) {
-
-        User user = userRepository.findById(userId)
-            .orElseThrow(() -> new IllegalArgumentException("해당 ID의 유저를 찾을 수 없습니다: " + userId));
+    @Transactional
+    public UserDto update(UUID userId, UserUpdateRequest userUpdateRequest,
+        Optional<BinaryContentCreateRequest> profileRequest) {
 
         String newUsername = userUpdateRequest.newUsername();
         String newEmail = userUpdateRequest.newEmail();
         String newPassword = userUpdateRequest.newPassword();
+
+        User user = userRepository.findById(userId)
+            .orElseThrow(() -> new IllegalArgumentException("해당 ID의 유저를 찾을 수 없습니다: " + userId));
 
         if (userRepository.existsByEmail(newEmail)) {
             throw new IllegalArgumentException("이미 존재하는 이름입니다: " + newEmail);
@@ -105,34 +98,37 @@ public class BasicUserService implements UserService {
                 "이미 존재하는 이메일입니다: " + newUsername + " already exists");
         }
 
-        UUID nullableProfileId = profileCreateRequest
+        BinaryContent newProfile = profileRequest
             .filter(BinaryContentCreateRequest::isValid)
-            .map(profile -> {
-                BinaryContent binaryContent = new BinaryContent(
-                    profile.fileName(),
-                    user.getId(),
-                    profile.bytes(),
-                    profile.contentType()
-                );
-                binaryContentRepository.save(binaryContent);
-                return binaryContent.getId();
+            .map(req -> {
+                BinaryContent newFile = binaryContentRepository.save(
+                    new BinaryContent(req.fileName(), req.size(), req.contentType()));
+                binaryContentStorage.put(newFile.getId(), req.bytes());
+                return newFile;
             })
             .orElse(null);
 
-        user.update(newUsername, newEmail, newPassword, nullableProfileId);
-        userRepository.update(user);
-        return user;
+        user.update(newUsername, newEmail, newPassword, newProfile);
+        User updatedUser = userRepository.save(user);
+        return userMapper.toDto(updatedUser);
     }
 
     @Override
+    @Transactional
     public void delete(UUID id) {
         User user = userRepository.findById(id)
             .orElseThrow(() -> new IllegalArgumentException("해당 ID의 유저를 찾을 수 없습니다: " + id));
 
-        binaryContentRepository.delete(id);
-        userStatusRepository.delete(id);
+        messageRepository.deleteByAuthorId(id);
 
-        userRepository.delete(id);
+        userRepository.deleteById(id);
+       /*
+       userStatusRepository.delete(id)
+            User와 연관된 UserStatus는 orphanRemoval = true로 이미 설정되어 있으므로 별도 삭제 불필요.
+
+        binaryContentRepository.delete(id)
+            프로필 이미지도 연관관계에서 orphanRemoval = true를 활용.
+        */
     }
 
     private boolean isEmailDuplicate(String email) {
